[gd_scene load_steps=7 format=3 uid="uid://ccqn6wrassd5a"]

[ext_resource type="Script" path="res://addons/ninetailsrabbit.match3_board/demo/demo.gd" id="1_dqalp"]
[ext_resource type="Script" path="res://addons/ninetailsrabbit.match3_board/src/match3_board.gd" id="2_wxjdv"]
[ext_resource type="Resource" uid="uid://conr06fdjbas6" path="res://addons/ninetailsrabbit.match3_board/demo/demo_board_configuration.tres" id="3_gr7lp"]
[ext_resource type="Script" path="res://addons/ninetailsrabbit.match3_board/demo/demo_animator.gd" id="12_fov6k"]
[ext_resource type="Script" path="res://addons/ninetailsrabbit.match3_board/demo/demo_highlighter.gd" id="13_dlgcr"]
[ext_resource type="Script" path="res://addons/ninetailsrabbit.match3_board/src/pieces/line_connector.gd" id="14_ktadd"]

[node name="Demo" type="Node2D"]
script = ExtResource("1_dqalp")

[node name="StateLabel" type="Label" parent="."]
offset_left = 534.0
offset_top = 42.0
offset_right = 581.0
offset_bottom = 65.0
text = "STATE"

[node name="Match3Board" type="Node2D" parent="." node_paths=PackedStringArray("animator", "highlighter", "line_connector")]
position = Vector2(270, 171)
script = ExtResource("2_wxjdv")
configuration = ExtResource("3_gr7lp")
animator = NodePath("Match3Animator")
highlighter = NodePath("Match3Highlighter")
line_connector = NodePath("Match3LineConnector")

[node name="Match3Animator" type="Node" parent="Match3Board" node_paths=PackedStringArray("board")]
script = ExtResource("12_fov6k")
board = NodePath("..")

[node name="Match3Highlighter" type="Node" parent="Match3Board" node_paths=PackedStringArray("board")]
script = ExtResource("13_dlgcr")
board = NodePath("..")

[node name="Match3LineConnector" type="Line2D" parent="Match3Board" node_paths=PackedStringArray("board")]
width = 1.5
default_color = Color(1, 1, 0.443137, 1)
script = ExtResource("14_ktadd")
board = NodePath("..")
